Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113985

Data type of aoEnabled seems to be wrong.

XMLWordPrintable

    • All
    • cface1bc0 (dev), 0a5844217 (6.6), 3b3a62b55 (6.5)

      https://doc.qt.io/qt-6/qml-qtquick3d-sceneenvironment.html#aoEnabled-prop

      It's written as float but it seems to be bool.

        For Gerrit Dashboard: QTBUG-113985
        # Subject Branch Project Status CR V

            docteam Qt Documentation Team
            mikio_hirai Mikio Hirai
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes