Doc: change type of the SceneEnvironment::aoEnabled property to be bool

The property had the type float in the documentation, which is
incorrect. It should be bool instead.

Fixes: QTBUG-113985
Change-Id: I60bb5ca5e0f432330c89f2b5a6bbf0d4f1bed17a
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit cface1bc0d90844f52b91dd47375e935e3ceb0c7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>